# inlay

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  rust-toolchain.toml
.github/workflows/: checks.yml  docs.yml  publish.yml
benchmarks/: README.md  appish_codegen.py  appish_transitions.py  cache_portability.py  cross_context_queries.py  density_template.py  hostish_cross_context.py  production_shape.py  productionish_template.py  query_trace.py  runner.py  staged_neutral_cycle.py
benchmarks/templates/: cache_portability.py.jinja  cache_portability_context.py.j2  cross_context_queries.py.jinja  cross_context_queries_context.py.j2  density_context.py.j2  production_shape.py.jinja  production_shape_context.py.j2  staged_neutral_cycle.py.jinja  staged_neutral_cycle_context.py.j2
crates/dedup/: Cargo.toml
crates/dedup/src/: lib.rs
crates/instrument/: Cargo.toml
crates/instrument-macros/: Cargo.toml
crates/instrument-macros/src/: lib.rs
crates/instrument/src/: lib.rs
crates/solver/: Cargo.toml
crates/solver/src/: arena.rs  cache.rs  context.rs  example.rs  instrument.rs  lib.rs  lookup_support.rs  rule.rs  search_graph.rs  solve.rs  stack.rs
crates/solver/src/traits/: arena.rs  env.rs  mod.rs  rule.rs  support.rs
crates/solver/tests/: cross_env_active_reuse.rs  cycles.rs  flattened_support.rs  merged_lookup_support.rs  reuse.rs  states.rs
docs/: docusaurus.config.js  package-lock.json  package.json
docs/content/: getting-started.md  how-does-it-work.md  index.md  limitations.md
docs/content/features/: hierarchical-contexts.md
docs/src/css/: custom.css
docs/src/pages/: getting-started.md  index.md
docs/src/prism/: rosePine.js
examples/: README.md
examples/gems-web/: pyproject.toml
examples/gems-web/src/gems/: app.py  domain.py  main.py
examples/gems-web/src/gems/adapters/: auth.py  market.py  postgres.py  sqlite.py  utils.py
inlay/: __init__.py  _native.pyi  compile.py  constants.py  default.py  registry.py  rules.py
inlay/type_utils/: __init__.py  errors.py  markers.py  normalize.py
src/: compile.rs  ingest.rs  instrument.rs  lib.rs  normalized.rs  pickle.rs  python_identity.rs  qualifier.rs  types.rs
src/compile/: compiler.rs  deps.rs  execution_graph.rs  flatten.rs  ingest.rs  mod.rs
src/registry/: converter.rs  entries.rs  mod.rs  source.rs
src/rules/: builder.rs  diagnostic.rs  env.rs  mod.rs  rule.rs
src/runtime/: deps.rs  executor.rs  flatten.rs  lazy_ref.rs  mod.rs  proxy.rs  resource_plan.rs  resources.rs  scope.rs  transition.rs
src/runtime/transition/: mod.rs  wrappers.rs
src/runtime/transition/pipeline/: exits.rs  generator.rs  mod.rs  pipelines.rs  step.rs
src/runtime/transition/pipeline/testdata/: _inlay_generator_protocol_tests.py
src/runtime/transition/wrappers/: awaitable.rs  context_manager.rs  mod.rs
src/types/: deep_eq.rs  deep_hash.rs  definitions.rs  monomorphize.rs  shallow_eq.rs  shallow_hash.rs  storage.rs  traverse.rs  type_key_map.rs  unify.rs
tests/: test_gc.py  test_introspection.py  test_normalize.py  test_pickle.py  test_runtime.py  test_types.py
tests/compile/: conftest.py  test_advanced_signatures.py  test_cache_and_cycles.py  test_core_compile.py  test_defaults.py  test_generic_resolution.py  test_make_partial.py  test_method_impls.py  test_protocol_constructors.py  test_protocol_properties.py  test_qualifiers.py  test_recursive_types.py  test_registry_overrides.py  test_resolution_errors.py  test_sequence_providers.py
