[package]
name = "inlay"
version = "0.1.0"
edition = "2024"

[lib]
name = "inlay"
crate-type = ["cdylib", "lib"]

[dependencies]
context-solver = { path = "crates/solver" }
slotmap = "1.0"
indexmap = "2.13.0"
hashbrown = "0.16"
derive-where = "1.6.1"
pyo3 = "0.28"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
context-solver = { path = "crates/solver", features = ["example"] }

[profile.release]
debug = true
