[project]
name = "inlay"
version = "0.1.0"
description = "Static, structural dependency injection for Python"
requires-python = ">=3.14"
dependencies = [
    "typing-extensions>=4.15.0",
]


[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "inlay._native"

[tool.basedpyright]
typeCheckingMode = "recommended"
enableExperimentalFeatures = true
enableBasedFeatures = true

[tool.ruff]
target-version = "py314"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "TID"]
ignore = ["B011"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = true

[tool.ruff.lint.isort]
known-first-party = ["inlay"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
