[project]
name = "inlay"
version = "0.2.0"
description = "Static, structural dependency injection for Python"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "typing-extensions>=4.15.0",
]


[dependency-groups]
dev = [
    "anyio",
    "basedpyright>=1.34.0",
    "jinja2>=3.1.6",
    "mypy>=2.1.0",
    "perfetto>=0.16.0",
    "prek>=0.3.13",
    "pyrefly>=1.0.0",
    "pyright>=1.1.410",
    "pytest",
    "ruff>=0.14.5",
    "ty>=0.0.42",
    "zuban>=0.8.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
locked = true
module-name = "inlay._native"

[tool.basedpyright]
include = ["inlay", "tests", "benchmarks"]
typeCheckingMode = "recommended"
enableExperimentalFeatures = true
enableBasedFeatures = true

[tool.mypy]
files = ["inlay"]
python_version = "3.14"
enable_incomplete_feature = ["TypeForm"]
show_error_codes = true

[tool.pyrefly]
project-includes = ["inlay/**/*.py", "inlay/**/*.pyi"]
search-path = ["."]
disable-search-path-heuristics = true
python-version = "3.14.0"
permissive-ignores = true

[tool.ty.src]
include = ["inlay"]

[tool.ty.environment]
python-version = "3.14"

[tool.ruff]
target-version = "py314"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "TID"]
ignore = ["B011"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = true

[tool.ruff.lint.isort]
known-first-party = ["inlay"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
