[package]
name = "context-solver"
version = "0.1.0"
edition = "2024"

[features]
default = []
example = []
tracing = ["dep:tracing"]

[dependencies]
inlay-instrument-macros = { path = "../instrument-macros" }
slotmap = "1.0"
thiserror = "2.0.18"
tracing = { version = "0.1.44", features = ["attributes"], optional = true }
