[package]
name = "context-solver"
version = "0.1.0"
edition = "2024"

[features]
example = []
tracing = ["dep:tracing"]

[dependencies]
derive-where = "1.6.1"
inlay-instrument = { path = "../instrument" }
rustc-hash = "2.1"
slotmap = "1.0"
thiserror = "2.0.18"
tracing = { version = "0.1.44", features = ["attributes"], optional = true }
